fix dark mode on rst badge

--- a/src/furo/assets/styles/divio/_sidebar.scss
+++ b/src/furo/assets/styles/divio/_sidebar.scss
@@ -17,7 +17,7 @@
   }
 
   .toctree-l1 > label .icon {
-    color: black;
+    color: var(--color-foreground-secondary);
   }
 }
 
